Added sample code for generating whitenoise/sine wave/pluck sound processed through CombFilter

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,5 +12,6 @@ target_link_libraries(run_tests
   delayline
   Schroeder_Reverb
 )
+add_subdirectory(process)
 include(GoogleTest)
 gtest_discover_tests(run_tests)
