--- a/tests/process/CMakeLists.txt
+++ b/tests/process/CMakeLists.txt
@@ -6,7 +6,9 @@ FetchContent_MakeAvailable(dr_lib)
 add_executable(CombFilterProcess
     CombFilterProcess.cpp
 )
-
+add_executable(ReverbProcess
+    ReverbProcess.cpp
+)
 
 # dr_libsをインクルードできるようにする。(このプログラムをコンパイルする用なのでPRIVATEで良い)
 target_include_directories(
@@ -14,9 +16,25 @@ target_include_directories(
     PRIVATE
     ${dr_lib_SOURCE_DIR}
 )
+
+target_include_directories(
+    ReverbProcess
+    PRIVATE
+    ${dr_lib_SOURCE_DIR}
+)
+
 target_link_libraries(CombFilterProcess
     PRIVATE 
     CombFilter
     delayline
+    dr_libs_interface
+    )
+
+target_link_libraries(ReverbProcess
+    PRIVATE 
+    Reverb
+    CombFilter
+    delayline
+    AllpassFilter
     dr_libs_interface
     )
